--- a/app/views/playlist/index.html.erb
+++ b/app/views/playlist/index.html.erb
@@ -1,4 +1,4 @@
-<%= form_tag playlist_create_path do |f| %>
+<%= form_tag "/playlist/#{@playlist.code}" do |f| %>
 <input placeholder="playlist" type="text" maxlength="10" onkeyup="this.value = this.value.replace(/[^a-zA-Z]/, '')"/>
 <br>
         
