--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -42,7 +42,7 @@ p {
 .QupInput{
     text-transform: uppercase;
     font-family: monospace;
-    font-size: 30px;
+    font-size: 26px;
     color: #000000;
     background-color: #ffffff;
     border-style:outset;
@@ -187,7 +187,7 @@ p {
     white-space:nowrap;
     
     
-    margin-right:10%;
+    margin-right:0px;
     margin-left:0;
     
     width: 60%;
