--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -24,7 +24,7 @@ body {
 
 p {
     color:#FFFFFF;
-    font-size:30px;
+    font-size:16pt;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     
 }
@@ -43,10 +43,10 @@ p {
 .QupInput{
     text-transform: uppercase;
     font-family: monospace;
-    font-size: 26px;
+    font-size: 16pt;
     color: #000000;
     background-color: #ffffff;
-    border-style:outset;
+    border-style:solid ;
     text-align:center;
     padding-top:6px;
     padding-bottom:6px;
@@ -54,9 +54,13 @@ p {
     width: 232px;
 }
 
-.search_result_item{
-    width:90%px;
+.search_result_item button{
+    width:543px;
+    float:right;
+}
 
+.search_result_item{
+    margin-top: 2px;
 }
 
 #sp-list{
@@ -66,11 +70,11 @@ p {
 .QupButton{
     color: #ffffff;
     background-color: #74b301;
-    border-style:outset;
+    border-style:solid;
     border-color:#74b301;
     border-radius: 2px;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-    font-size: 30px;
+    font-size: 16pt;
     margin-left:0px;
     margin-right:0px;
     margin-top:0px;
@@ -91,75 +95,41 @@ p {
 
 .Upvote{
 
-    font-size:30px;
-    color: #000000;
-    background-color:#ffffff;
-    height: 40px;
+    font-size:16pt;
+    color: #FFFFFF;
+    background-color:#74b301;
+    border: 1px solid #313131;
+    border-top-left-radius: 8px;
+    /*border-bottom-left-radius: 5px;*/
+    height: 37px;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-    border-style:outset;
-    border-top-width: 1px;
-    border-bottom-width: 1px;
-    border-left-width: 1px;
-    border-right-width: 1px;
     text-align:left;
     overflow:ellipsis;
     display:inline-block;
     white-space:nowrap;
     
-    width: 60px;
+    width: 40px;
+    float: left;
     
     margin-left: 5px;
     
-    padding-top:7px;
-    padding-bottom:40px;
-    padding-left:2px;
-}
-
-.UpvoteClone{
-    
-    font-size:30px;
-    color: #000000;
-    background-color:#313131;
-    height: 40px;
-    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-    border-style:none;
-    border-top-width: 1px;
-    border-bottom-width: 1px;
-    border-left-width: 1px;
-    border-right-width: 1px;
-    text-align:left;
-    text-overflow:ellipsis;
-    display:inline-flex;
-    white-space:nowrap;
-    overflow: hidden;
-    
-    
-    width:12%;
-    
-    margin-left: 10%;
-    
-    padding-top:7px;
-    padding-bottom:40px;
     padding-left:2px;
 }
 
 #SongData{
-    font-size: 30px;
+    font-size: 16pt;
     color: #000000;
     background-color: #ffffff;
-    height: 40px;
+    height: 28px;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-    border-style:outset;
-    border-top-width: 1px;
-    border-bottom-width: 1px;
-    border-left-width: 1px;
-    border-right-width: 1px;
+    border: 1px solid #313131;
+    border-bottom-right-radius: 8px;
     text-align:left;
     overflow:hidden;
     display:inline-block;
     white-space:nowrap;
     float:right;
-    width: 500px;
+    width: 538px;
     
     padding-top: 7px;
     padding-right:12px;
@@ -169,16 +139,13 @@ p {
 
 #track_search{
 
-    font-size: 30px;
+    font-size: 16pt;
     color: #000000;
     background-color: #ffffff;
-    height: 40px;
+    height: 26px;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-    border-style:outset;
-    border-top-width: 1px;
-    border-bottom-width: 1px;
-    border-left-width: 1px;
-    border-right-width: 1px;
+    border: 1px solid #313131;
+    border-bottom-right-radius: 8px;
     text-align:center;
     text-overflow:ellipsis;
     overflow:hidden;
@@ -188,8 +155,8 @@ p {
     
     margin-right:0px;
     margin-left:0;
-    
-    width: 60%;
+    float: right;
+    width: 538px;
     text-align:left;
     
     padding-top:7px;
