--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
 </head>
 <body>
 <div class="centered">
-    <%= image_tag("queueup_logo.png", :id => "logo") %>
+    <%= link_to image_tag("queueup_logo.png", :id => "logo"), root_path %>
 
     <%= yield %>
 </div>
