--- a/app/views/playlist/index.html.erb
+++ b/app/views/playlist/index.html.erb
@@ -1,4 +1,4 @@
-<%= form_tag "/playlist/join" do |f| %>
+<%= form_tag "/playlist/join", :class => "home" do |f| %>
 <input class="QupInput" placeholder="playlist" type="text" name="code" maxlength="10" onkeyup="this.value = this.value.replace(/[^a-zA-Z]/, '')"/>
 <br>
         
